Changed default context to subdir in actions file for techtrends

--- a/.github/workflows/techtrends-dockerhub.yml
+++ b/.github/workflows/techtrends-dockerhub.yml
@@ -25,7 +25,7 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v4
         with:
-          context: project/
+          context: "{{defaultContext}}:project"
           file: ./Dockerfile
           push: true
           tags: techtrends:latest
