Added helm chart

--- a/project/kubernetes/service.yaml
+++ b/project/kubernetes/service.yaml
@@ -19,7 +19,7 @@ spec:
     protocol: TCP
     targetPort: 3111
   ## Identify the pods managed by this Service using the following selectors.
-  ## In this case, all pods with the label `go-helloworld`.
+  ## In this case, all pods with the label techtrends.
   selector:
     app: techtrends
     tag: latest
